# speckit-skills

./: .gitignore  .tagpr  AGENTS.md  CHANGELOG.md  LICENSE  README.md  mise.toml  pyproject.toml
.claude-plugin/: plugin.json
.github/: renovate.json
.github/workflows/: check.yaml  generate.yaml  tagpr.yaml  test.yaml
docs/plan/: init.md  patch.md
mise-tasks/: generate.py
skills/speckit-analyze/: SKILL.md
skills/speckit-checklist/: SKILL.md
skills/speckit-clarify/: SKILL.md
skills/speckit-clarify/scripts/: common.sh
skills/speckit-constitution/: SKILL.md
skills/speckit-implement/: SKILL.md
skills/speckit-plan/: SKILL.md
skills/speckit-plan/references/: plan-template.md
skills/speckit-plan/scripts/: setup-plan.sh  update-agent-context.sh
skills/speckit-specify/: SKILL.md
skills/speckit-specify/references/: spec-template.md
skills/speckit-specify/scripts/: create-new-feature.sh
skills/speckit-tasks/: SKILL.md
skills/speckit-taskstoissues/: SKILL.md
